--- a/src/App.css
+++ b/src/App.css
@@ -62,3 +62,38 @@ body {
   font-weight: 600;
   src: local("Muli"), url(./fonts/Muli/Muli-SemiBold.ttf) format("opentype");
 }
+
+.loadingMessageWrapper {
+  position: relative;
+}
+
+.loadingMessageContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 72px;
+}
+
+.loadingMessage {
+  font-size: 32px;
+}
+
+
+#loading {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border: 3px solid rgba(255,255,255,.3);
+  border-radius: 50%;
+  border-top-color: black;
+  animation: spin 1s ease-in-out infinite;
+  -webkit-animation: spin 1s ease-in-out infinite;
+}
+
+@keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
+}
