--- a/src/components/EventList.css
+++ b/src/components/EventList.css
@@ -3,5 +3,22 @@
   height: auto;
   box-shadow: 0 2px 7px rgba(62, 118, 244, 0.14);
   display: inline-block;
-  margin: 5vh 0 0 0;
+  margin: 5vh auto;
+}
+
+.loadMoreButton {
+  display: inline-block;
+  margin: 0 0 5vh 0;
+  padding: 30px;
+  border-radius: 6px;
+  background: white;
+  border: 1px solid white;
+  font-size: 12px;
+  font-weight: 600;
+  box-shadow: 0 2px 7px rgba(62, 118, 244, 0.14);
+}
+
+.loadMoreButton:hover {
+  background: black;
+  color: white;
 }
